EDA completed and hypotheses formulated

--- a/notebook/ab_test_analysis.ipynb
+++ b/notebook/ab_test_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "175ce292",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eaaee591",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,12 +95,12 @@
    "source": [
     "## 2. Exploratory Data Analysis (EDA)\n",
     "Now that the data is clean, we'll dive deeper. The first step in analyzing an A/B test is to check if the two groups have a similar number of players.\n",
-    "### Checking Group Sizes"
+    "### 2.1 Checking Group Sizes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "58d21e3a",
    "metadata": {},
    "outputs": [
@@ -134,13 +134,13 @@
    "id": "09f2b2e4",
    "metadata": {},
    "source": [
-    "### Analyzing 'sum_gamerounds'\n",
+    "### 2.2 Analyzing 'sum_gamerounds'\n",
     "Let's look at the distribution of the `sum_gamerounds` column, which is a key indicator of player engagement. We'll start by looking at its summary statistics to identify potential skewness or outliers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "cc072acd",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "Name: sum_gamerounds, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "4515514c",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "id": "4b411286",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "Name: sum_gamerounds, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "d8101e5f",
    "metadata": {},
    "outputs": [
@@ -265,6 +265,127 @@
    "source": [
     "sns.boxplot(x = data['sum_gamerounds'])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6e33478",
+   "metadata": {},
+   "source": [
+    "### 2.3 Analyzing Player Behavior by Group\n",
+    "The box plot shows a heavily skewed distribution, which is common in gaming data. The \"outliers\" are not errors but represent our most engaged players. Our goal now is to compare the engagement (`sum_gamerounds`) between the two groups (`gate_30` and `gate_40`).\n",
+    "\n",
+    "We can do this by grouping the data by `version` and calculating summary statistics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7c91fc43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>version</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>gate_30</th>\n",
+       "      <td>44699</td>\n",
+       "      <td>51.342111</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>102.057598</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gate_40</th>\n",
+       "      <td>45489</td>\n",
+       "      <td>51.298776</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>103.294416</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2640</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         count       mean  median         std  min   max\n",
+       "version                                                 \n",
+       "gate_30  44699  51.342111    17.0  102.057598    0  2961\n",
+       "gate_40  45489  51.298776    16.0  103.294416    0  2640"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('version')['sum_gamerounds'].agg(['count', 'mean', 'median', 'std', 'min', 'max'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5da790b",
+   "metadata": {},
+   "source": [
+    "**EDA Conclusion:**\n",
+    "\n",
+    "The exploratory data analysis is complete. We have confirmed that the group sizes are balanced and have handled the extreme outlier in `sum_gamerounds`. The dataset is now clean and ready for formal hypothesis testing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97889333",
+   "metadata": {},
+   "source": [
+    "## 3. Hypothesis Formulation\n",
+    "\n",
+    "Now that we have cleaned and explored the data, it's time to formally state our hypotheses for the A/B test.\n",
+    "\n",
+    "* **Null Hypothesis (H₀):** There is **no difference** in player retention (both 1-day and 7-day) between the two groups (`gate_30` and `gate_40`). Any observed difference is due to random chance.\n",
+    "\n",
+    "* **Alternative Hypothesis (H₁):** There is **a significant difference** in player retention (both 1-day and 7-day) between the two groups.\n",
+    "\n",
+    "Our goal is to gather statistical evidence to either reject the null hypothesis in favor of the alternative, or fail to reject it.\n",
+    "print(data.head(1))"
    ]
   }
  ],
