--- a/notebook/ab_test_analysis.ipynb
+++ b/notebook/ab_test_analysis.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "7c91fc43",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "gate_40  45489  51.298776    16.0  103.294416    0  2640"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,8 +384,50 @@
     "\n",
     "* **Alternative Hypothesis (H₁):** There is **a significant difference** in player retention (both 1-day and 7-day) between the two groups.\n",
     "\n",
-    "Our goal is to gather statistical evidence to either reject the null hypothesis in favor of the alternative, or fail to reject it.\n",
-    "print(data.head(1))"
+    "Our goal is to gather statistical evidence to either reject the null hypothesis in favor of the alternative, or fail to reject it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67878bbe",
+   "metadata": {},
+   "source": [
+    "## 4. Metric Calculation\n",
+    "Now we move to the primary metrics of our A/B test: 1-day and 7-day retention. We will calculate the retention rate for each group. This is simply the average of the boolean retention columns, as `True` values are treated as `1` and `False` values as `0`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c7336d39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         retention_1  retention_7\n",
+      "version                          \n",
+      "gate_30    44.819795    19.018323\n",
+      "gate_40    44.228275    18.200004\n"
+     ]
+    }
+   ],
+   "source": [
+    "retention = data.groupby('version')[['retention_1', 'retention_7']].mean()\n",
+    "print(retention * 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbe04118",
+   "metadata": {},
+   "source": [
+    "**Observation:**\n",
+    "\n",
+    "We can see a difference in retention rates for both 1-day and 7-day periods. The `gate_30` group shows a slightly higher retention rate than the `gate_40` group.\n",
+    "\n",
+    "The next and final step is to determine if this difference is **statistically significant** or if it's just due to random chance. For this, we will use a statistical test."
    ]
   }
  ],
