--- a/notebook/ab_test_analysis.ipynb
+++ b/notebook/ab_test_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "175ce292",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "eaaee591",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "58d21e3a",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cc072acd",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "Name: sum_gamerounds, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4515514c",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4b411286",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
        "Name: sum_gamerounds, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d8101e5f",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7c91fc43",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "gate_40  45489  51.298776    16.0  103.294416    0  2640"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "c7336d39",
    "metadata": {},
    "outputs": [
@@ -428,6 +428,150 @@
     "We can see a difference in retention rates for both 1-day and 7-day periods. The `gate_30` group shows a slightly higher retention rate than the `gate_40` group.\n",
     "\n",
     "The next and final step is to determine if this difference is **statistically significant** or if it's just due to random chance. For this, we will use a statistical test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54e38f64",
+   "metadata": {},
+   "source": [
+    "## 5. Statistical Testing:\n",
+    "We have observed a difference in the retention rates between our two groups (`gate_30` and `gate_40`). Now, we must determine if this difference is statistically significant or if it's simply due to random chance.\n",
+    "So, we are comparing two categorical variables: the gate `version` (gate_30 vs. gate_40) and player `retention` (True vs. False). The **Chi-squared (χ²) test** is the best option here, as it is designed to compare proportions between two or more categorical groups."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2295541",
+   "metadata": {},
+   "source": [
+    "We will use a standard **significance level (alpha) of 0.05**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "09b2b71f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1adefc75",
+   "metadata": {},
+   "source": [
+    "First, let's create the contingency table for 1-day retention and calculate the Chi-squared test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "56d9b8f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retention_1  False  True \n",
+      "version                  \n",
+      "gate_30      24665  20034\n",
+      "gate_40      25370  20119\n",
+      "0.07500999897705692\n"
+     ]
+    }
+   ],
+   "source": [
+    "retention_1_table = pd.crosstab(data['version'], data['retention_1'])\n",
+    "print(retention_1_table)\n",
+    "\n",
+    "chi2, p_value_1, dof, expected = sp.stats.chi2_contingency(retention_1_table)\n",
+    "print(p_value_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09551669",
+   "metadata": {},
+   "source": [
+    "Now, let's do the same for 7-day retention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "293b1fe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "retention_7  False  True \n",
+      "version                  \n",
+      "gate_30      36198   8501\n",
+      "gate_40      37210   8279\n",
+      "0.0016391259678654425\n"
+     ]
+    }
+   ],
+   "source": [
+    "retention_2_table = pd.crosstab(data['version'], data['retention_7'])\n",
+    "print(retention_2_table)\n",
+    "\n",
+    "chi2_2, p_value_2, dof_2, expected_2 = sp.stats.chi2_contingency(retention_2_table)\n",
+    "print(p_value_2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e27fde5",
+   "metadata": {},
+   "source": [
+    "### Analysis of P-values\n",
+    "\n",
+    "Now we have the p-values for both tests. We need to compare them to our significance level of 0.05 to make a conclusion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f384b9c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p_value_1 > alpha)\n",
+    "print(p_value_2 > alpha)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21d91085",
+   "metadata": {},
+   "source": [
+    "We have completed our A/B test analysis by performing two Chi-squared tests, one for 1-day retention and one for 7-day retention. Our significance level (alpha) was 0.05.\n",
+    "\n",
+    "### Conclusion:\n",
+    "\n",
+    "1.  **1-Day Retention:**\n",
+    "    * **P-value:** `0.075`\n",
+    "    * **Conclusion:** Since the p-value is greater than 0.05, we **fail to reject the null hypothesis**. This means there is **no statistically significant difference** in 1-day retention between the `gate_30` and `gate_40` groups. The small difference we observed is likely due to random chance.\n",
+    "\n",
+    "2.  **7-Day Retention:**\n",
+    "    * **P-value:** `0.0016`\n",
+    "    * **Conclusion:** Since the p-value is much smaller than 0.05, we **reject the null hypothesis**. This indicates there is **a statistically significant difference** in 7-day retention. The `gate_40` group shows a lower 7-day retention rate, and this is not a random fluctuation."
    ]
   }
  ],
